[PEPPER-1267] Implement ParticipantData legacy ID analysis (#2813)
* Implement ParticipantData legacy ID analysis

* Adjust null handling for ParticipantData serialization

* Changes due to code review

* Fix checkstyle violations due to method rename

* Changes due to code review